# mollytime

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE.txt  README.md  after_pads.py  available_devices.py  basic_synth.vcv  build.sh  color.py  fnord.py  generic_midi.py  linux_midi.py  midi.py  overrides.py  pads.py  pallets.py  piano.py  pitch_aftertouch.vcv  pygame_setup.py  roller.py  settings.xml  surface_tools.py  tempo_experiment.py  theramin.py  tiles.py  widgets.py
src/: RmlUi_Backend_SDL_GL3.cpp  RmlUi_Renderer_GL3.cpp  midi_file.cpp  midi_file.h  mollytime.cpp
windows/: mollytime.cpp  mollytime.sln  mollytime.vcxproj  mollytime.vcxproj.filters
